--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,2 +1,10 @@
 name: Quality checks
 on: push
+
+jobs:
+  check_name:
+    name: Check that names is in README
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: grep "Steffen" README.md
